enum flow_alloc_code {
        FLOW_REQ     = 1;
        FLOW_REPLY   = 2;
        FLOW_DEALLOC = 3;
};

message flow_alloc_msg {
        required flow_alloc_code code  = 1;
        optional string dst_name       = 2;
        optional string src_ae_name    = 3;
        optional uint32 qos_cube       = 4;
        optional sint32 response       = 5;
};
